@@ -4,6 +4,8 @@
 	* Added Olympus d-540z, c-310z, x-100, reported by Bruno Parente.
 	* Added Panasonic DMC-LZ2, reported by Jens Stutte.
 	* Added iRiver T30, reported by Bruno Parente Lima.
+	* Added Nikon D50.
+	* Added iRiver T10 with alternate ID, reported by Jay MacDonald.
 
 2005-10-28  Marcus Meissner  <marcus@jet.franken.de>
 	
